src/objects/SubscriptionProductFeature__c.object
<CustomObject>
    <description>subscription product feature is used to query the feature under the subscription&apos;s rate plan.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Subscription_Product_Features</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FeatureCode__c</fullName>
        <label>Feature Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FeatureDescription__c</fullName>
        <label>Feature Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FeatureName__c</fullName>
        <label>Feature Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductDAZNId__c</fullName>
        <label>Product DAZNId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductDescription__c</fullName>
        <label>Product Description</label>
        <length>22768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProductEffectiveEndDate_Product__c</fullName>
        <formula>Product__r.EffectiveEndDate__c</formula>
        <label>Product Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProductEffectiveEndDate__c</fullName>
        <label>Product Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProductNameProduct__c</fullName>
        <formula>Product__r.Name</formula>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductSKU_Product__c</fullName>
        <formula>Product__r.SKU__c</formula>
        <label>Product SKU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductSKU__c</fullName>
        <label>Product SKU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Subscription Product Features</relationshipLabel>
        <relationshipName>Subscription_Product_Features</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RatePlanDAZNId__c</fullName>
        <description>This field holds rateplan id.</description>
        <externalId>true</externalId>
        <label>RatePlan DAZNId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RatePlanDescription__c</fullName>
        <label>RatePlan Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RatePlanEffectiveEndDate__c</fullName>
        <label>RatePlan Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RatePlanName__c</fullName>
        <label>RatePlan Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription</label>
        <referenceTo>Subscription__c</referenceTo>
        <relationshipName>Subscription_Product_Features</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>DAZN Subscription Product Feature</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DAZN Subscription Product Features</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>